--- a/checkout/pom.xml
+++ b/checkout/pom.xml
@@ -54,5 +54,33 @@
 		<version>${spring.framework.version}</version>
 	</dependency>
   </dependencies>
-
+ <build>
+	<finalName>checkout</finalName>
+	<plugins>
+		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-compiler-plugin</artifactId>
+			<version>2.3.1</version>
+			<configuration>
+				<source>1.6</source>
+				<target>1.6</target>
+			</configuration>
+		</plugin>
+		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-jar-plugin</artifactId>
+			<version>2.3.1</version>
+			<configuration>
+				<archive>
+					<manifest>
+						<addClasspath>true</addClasspath>
+					</manifest>
+					<manifestEntries>
+						<Main-Class>com.dbug.checkout.App</Main-Class>
+					</manifestEntries>
+				</archive>
+			</configuration>
+		</plugin>
+	</plugins>
+</build>
 </project>
